# entt

./: CMakeLists.txt  TODO  appveyor.yml
src/entt/core/: ident.hpp
src/entt/entity/: fwd.hpp  helper.hpp  registry.hpp  snapshot.hpp
test/: CMakeLists.txt
test/entt/entity/: registry.cpp  snapshot.cpp
